# VT1_iggytop

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  Dockerfile  GNN_QUICK_START.md  README.md  create_anndata.py  create_knowledge_graph.py  create_knowledge_graph_docker.py  docker-compose.yml  docker-variables.env  pyproject.toml  requirements_cluster.txt  submit_minimal.slurm
.github/workflows/: ci_ingestion.yml  data_release.yml  keep_alive.yml
codes/: coolgraph  embedding_analysis.py  pruebas  tcr_epitope_baseline.py  tcr_epitope_minimal.py  tcr_epitope_pipeline.py
codes/gnn/: models.py  submit_gnn.slurm  train.py
codes/gnn/configs/: gat_mlp.yaml  sage_dot.yaml  sage_mlp.yaml
docker/: create_table.sh
docs/source/: api.rst  conf.py  contributing.md  graph_data_structure.md  index.md  references.bib  tabular_data_structure.md  tutorials.md  usage.md
docs/source/notebooks/: Scirpy_query_annotation.ipynb  database_summary.ipynb
mlruns/1/models/m-685337d8b4104a25aef3dacbaa8c18a0/artifacts/: MLmodel  model.pkl  requirements.txt
mlruns/1/models/m-d9ac993bf01946aeb7295e1ab52385a3/artifacts/: MLmodel  conda.yaml  model.pkl  python_env.yaml
notebooks/: database_summary.ipynb  eda.ipynb  full_analysis.ipynb  metrics_comparison.ipynb  mlflow_baseline_metrics_dashboard.ipynb  results_analysis (1).ipynb
notebooks/outputs/: mlflow.db
outputs/: mlflow.db
outputs/mlruns/0/: meta.yaml
outputs/mlruns/595169976023349554/: meta.yaml
outputs/mlruns/595169976023349554/b05962aa4a204dd28b2ba5ada0f2642e/: meta.yaml
outputs/mlruns/595169976023349554/b05962aa4a204dd28b2ba5ada0f2642e/tags/: mlflow.source.git.commit  mlflow.source.name
report/: next_steps.fdb_latexmk  next_steps.tex  results_summary.tex
scripts/: gnn_smoke_test.py  gnn_smoke_test_synthetic.py  run_gnn_one_epoch.sh  submit_gnn_one_epoch.slurm
src/iggytop/adapters/: base_adapter.py  cedar_adapter.py  constants.py  iedb_adapter.py  itrap_adapter.py  mapping_utils.py  mcpas_adapter.py  neotcr_adapter.py  tcr3d_adapter.py  trait_adapter.py  utils.py  vdjdb_adapter.py
src/iggytop/config/: biocypher_config.yaml  biocypher_config_x.yaml  biocypher_docker_config.yaml  schema_config.yaml
src/iggytop/gnn/: README.md  __init__.py  data_loader.py  models.py  train.py  utils.py
src/iggytop/gnn/config/: gat.yaml  gcn.yaml  graphsage.yaml  train.yaml
src/iggytop/io/: RELEASE_NOTES_TEMPLATE.md  create_knowledge_graph.py  release.py
tests/: test_adapters.py  test_utils.py
tests/data/: test_subset.h5ad
