[project]
name = "iggytop"
version = "0.7.0"
description = "Immune repertoire information retrieval and integration"
authors = [
    { name = "Valeriia Dragan" },
    { name = "Raphael De Gottardi", email = "raphael.degottardi@zhaw.ch" },
    { name = "Sebastian Lobentanzer", email = "sebastian.lobentanzer@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biocypher>=0.11.0",
    "pandas>=2.0.1",
    "PyGithub>=1",
    "requests>=2",
    "pooch>=1",
    "tqdm>=4.65.0",
    "matplotlib>=3.10.0",
    "matplotlib-venn>=1.1.1",
    "numpy>=2",
    "bio>=1.7.1",
    "muon>=0.1.7",
    "parasail>=1.3.4",
    "scirpy>=0.22.3",
    "openpyxl>=3.1.5,<4.0.0",
    "ijson>=3.4.0.post0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.0",
    "bump2version>=1.0.1",
    "pytest>=8.0.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.4.0",
]
docs = [
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-autodoc-typehints>=3.0.1",
    "myst-parser>=4.0.1",
    "myst-nb>=1.3.0",
    "sphinxcontrib-bibtex>=2.6.5",
    "sphinx-book-theme>=1.1.4",
    "sphinx-copybutton>=0.5.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.8",
    "plotly>=6.6.0",
    "kaleido==0.2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/iggytop"]

[tool.hatch.build]
include = ["src/iggytop/config/*.yaml"]

[project.scripts]
iggytop-release = "iggytop.io.release:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 140
target-version = "py311"
exclude = [".git", ".venv", "__pycache__", "*.pyc", "*.ipynb"]

[tool.ruff.lint]
# Start with a comprehensive set but not ALL
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "N",   # naming
    "UP",  # pyupgrade
    "PL",  # Pylint
    "RUF", # Ruff-specific rules
    "D",   # pydocstyle
    "C90", # mccabe complexity
    "S",   # flake8-bandit (security)
]
# Ignore rules that are too strict or conflict with each other
ignore = ["D203", "D213", "D103"] # Contradictory docstring rules

# Per-file rule exemptions
[tool.ruff.lint.per-file-ignores]
"test_*.py" = [
    "S101",
    "D103",
] # Allow assertions and missing docstrings in tests
"__init__.py" = ["F401"] # Allow unused imports in __init__.py

# Docstring settings
[tool.ruff.lint.pydocstyle]
convention = "google" # Use Google-style docstrings

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
